<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_card">Business Card</string>
    <string name="new_card">New Card</string>
    <string name="label_name">Name</string>
    <string name="label_phone">Phone</string>
    <string name="label_email">Email</string>
    <string name="label_company">Company</string>
    <string name="label_color">Color</string>
    <string name="label_confirm">Confirm</string>
    <string name="Label_show_success">Card created with success!</string>
    <string name="label_share">Share</string>
</resources>